# project_fastapi

./: .gitignore  pyproject.toml
app/: config.py  database.py  main.py
app/api/: __init__.py  articles.py  categories.py
app/core/: config.py
app/core/database/: connection.py
app/dao/: articles.py  base.py  categories.py
app/models/: __init__.py  articles.py  base.py  categories.py
app/schemas/: articles.py  categories.py
app/templates/: articles.html  base.html  index.html
app/views/: __init__.py  articles.py
migrations/: env.py
migrations/versions/: 6916cf226438_initial_migration.py
